Add Models, Services, Repositories, DTO, Validators, Middleware, Enums

--- a/MusicWebsite.Server/appsettings.json
+++ b/MusicWebsite.Server/appsettings.json
@@ -1,9 +1,23 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=MusicWebsiteDb;Trusted_Connection=True;"
+    },
+    "Jwt": {
+        "Key": "YourSecretKey",
+        "Issuer": "YourIssuer",
+        "Audience": "YourAudience"
+    },
+        "FileStorage": {
+            "RootPath": "Uploads",
+            "MusicFolder": "Music",
+            "CoversFolder": "Covers",
+            "ProfilesFolder": "Profiles"
+        },
+        "Logging": {
+            "LogLevel": {
+                "Default": "Information",
+                "Microsoft.AspNetCore": "Warning"
+            }
+        },
+        "AllowedHosts": "*"
     }
-  },
-  "AllowedHosts": "*"
-}
